# BeautifulSoup_and_scrapy

./: main_soup.py  pyproject.toml
data_to_sql/: find_select.py  models_sql.py
