[tool.poetry]
name = "hw-9"
version = "0.1.0"
description = ""
authors = ["Alona7777 <abogolepova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
lxml = "^5.1.0"
pymongo = "^4.6.2"
mongoengine = "^0.27.0"
scrapy = "^2.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
